set up landing and classes front-end, set up dummy data to test html and angular

--- a/client/app/classes.html
+++ b/client/app/classes.html
@@ -3,22 +3,46 @@
 <!-- Page Content -->
 <div class="container">
 
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1>Classes</h1>
-            <p class="lead"></p>
+    <div class="navbar">
+        <div class="navbar-header">
+            <p class="navbar-brand">Search for classes by</p>
         </div>
+        <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <label>Class-type:</label>
+                <select class="form-control" ng-model="selectedTag" ng-options="tag.name for tag in uniqueTags">
+                    <option value="" ng-show="true"></option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Studio:</label>
+                <select class="form-control" ng-model="selectedStudio" ng-options="studio.name for studio in studios">
+                    <option value="" ng-show="true"></option>
+                </select>
+            </div>
+        </form>
     </div>
     <!-- /.row -->
     <!-- will be a listing of all by nearest date (that isn't in the past) -->
     <!-- will allow users to search by class tag and studio -->
     <!-- right side of page will feature the nearest class by default, will change to whatever class the user clicks to get more details -->
     <!-- classes will be listed in a row on the left side of the page -->
-    <div ng-repeat="class in classes">
-        <p>{{class.name}}</p>
-        <p>{{class.studio}}</p>
-        <p>{{class.start_time}}</p>
-        <p>{{class.end_time}}</p>
+    <div class="col-sm-4">
+        <div ng-repeat="class in classes">
+            <h3>{{class.name}}</h3>
+            <p>{{class.tag}} - {{class.start_time}}</p>
+            <button id="class-detail-{{class.id}}" class="btn btn-info">Details</button>
+        </div>
+    </div>
+    <div class="col-sm-8">
+        <h2>{{featuredClass.name}}</h2>
+        <p><span class="bold">Studio ID:</span> {{featuredClass.studio_id}}</p>
+        <p><span class="bold">Type:</span> {{featuredClass.tag}}</p>
+        <p><span class="bold">When:</span> {{featuredClass.start_time}}</p>
+        <p><span class="bold">Length:</span> {{featuredClass.end_time}}</p>
+        <p><span class="bold">Cost:</span> ${{featuredClass.cost}}.00</p>
+        <p><span class="bold">Description:</span> {{featuredClass.description}}</p>
+        <button class="btn btn-primary">Sign-Up!</button>
     </div>
 
 </div>
