--- a/client/app/home.html
+++ b/client/app/home.html
@@ -3,16 +3,9 @@
 <!-- Page Content -->
 <div class="container">
 
-    <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1>Home</h1>
-            <p class="lead"></p>
-        </div>
+    <div class="jumbotron text-center">
+        <h1>What makes uMove?</h1>
+        <p><a class="btn btn-default btn-lg" href="#/classes" role="button">Discover Classes</a></p>
     </div>
-    <!-- /.row -->
-
-    <!-- will be a landing page that prompts users to search for classes by tag -->
-    <!-- What makes uMove? -->
-
 </div>
 <!-- /.container -->
