--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
   <!-- Angular and Angular Route Scripts -->
   <script src="bower_components/angular/angular.min.js" type="text/javascript"></script>
   <script src="bower_components/angular-route/angular-route.min.js" type="text/javascript"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js" type="text/javascript"></script>
   <!-- App Controllers -->
   <script src="app/config.js" type="text/javascript"></script>
   <script src="app/home.ctrl.js" type="text/javascript"></script>
